# SoloPM

./: .gitignore  .mcp.json  API.md  CLAUDE.md  README.md  pyproject.toml  solopm-cli-spec.md  solopm-product-brief.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.test.ts  api.ts  board.test.ts  board.ts  graph.test.ts  graph.ts  main.ts  markdown.test.ts  markdown.ts  store.ts  styles.css  ticket.ts  types.ts  ui.test.ts  ui.ts  util.test.ts  util.ts
src/solopm/: __init__.py  config.py
src/solopm/cli/: __init__.py  client.py  main.py  output.py
src/solopm/core/: __init__.py  errors.py  github.py  models.py  service.py  store.py  workflow.py
src/solopm/mcp/: __init__.py  channel.py  http_tools.py  server.py  tools.py
src/solopm/server/: __init__.py  app.py  schemas.py
src/solopm/web/: api.js  app.js  board.js  index.html  markdown.js  store.js  styles.css  ticket.js  ui.js  util.js
tests/: conftest.py  test_api.py  test_channel.py  test_cli.py  test_criteria.py  test_github.py  test_graph.py  test_links.py  test_mcp.py  test_mcp_http.py  test_output.py  test_project_status.py  test_prune.py  test_radar.py  test_remote_repo.py  test_reorder.py  test_review.py  test_review_memory.py  test_service.py  test_state_age.py  test_tags.py  test_workflow.py
