[project]
name = "solopm"
version = "0.1.0"
description = "SoloPM — an AI-first project management system for solo developers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SoloPM" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "mcp>=1.28.0",
]

[project.scripts]
solopm = "solopm.cli.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solopm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
